0.09 
 - Difference between SQS message AttributeMaps and QueueAttribute maps (thnks codehead) 

0.08 19 May 2015 22:12:00
 - EC2 SpotFleet API calls
 - Opsworks support for Windows
 - Update to ElasticBeanstalk API (ResourceName)
 - UserAgent now report Paws version number

0.07 15 May 2015 19:30:00
 - Generate META.yml
 - Add LICENSE info
 - Packaging corrections
 - Lots of documentation updates
 - Support for new features in CloudWatchLogs, EC2 (VPC endpoint support), CloudFormation
 - New API: Paws::DS (Directory Service)

0.06 5 May 2015 23:30:00
 - Fix Map handling in JsonCaller (and add tests)
 - Add META.* information for CPAN packaging (CHORNY)
 - Fix cpanfile dependencies for build/test scenarios (CHORNY)

0.05 3 May 2015 23:00:00
 - Delete files that were leftover from old API generations
 - Update to DynamoDB: support for expressions
 - Adapt API generation to new boto layout

0.04
 - API updates

0.03 10 Apr 2015 22:00:00
 - Service updates
 - Support for new services (like MachineLearning and WorkSpaces)
 - Better documentation for arguments to methods (and caller classes)

0.02 6 Apr 2015 18:30:00
 - Service updates
 - Map types were not being passed correctly to APIs

0.01 2 Apr 2015 02:35:00
 - First version launched to CPAN

2015-02-28
 - The default CredentialProviderChain will now try to read an ini
   file in ~/.aws/credentials with the aws credentials
 - The Credential providers have been moved into Paws::Credential namespace
 - The role that all Credential Providers have to add is now Paws::Credential
2015-02-09
 - Paws->service and $aws->service no longer return a class that
   has to be constructed. Instead they return an INSTANCE of the
   class. Attributes for the constructor can be passed as the 
   subsequent parameters of ->service.
   A method class_for_service returns the service class in the "old"
   fashion
   ->service('X')->new(region => 'Y') is now
   ->service('X', region => 'Y')
   or