@@ -1,0 +1,1 @@
+{"headers":{"date":"Fri, 05 Jun 2015 23:14:30 GMT","transfer-encoding":"chunked","server":"AmazonEC2"},"status":"401","content":"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<Response><Errors><Error><Code>AuthFailure</Code><Message>AWS was not able to validate the provided access credentials</Message></Error></Errors><RequestID>000000000000000000000000000000000000</RequestID></Response>"}
