@@ -1,0 +1,1 @@
+{"headers":{"x-amzn-requestid":"000000000000000000000000000000000000","connection":"close","content-type":"application/x-amz-json-1.1","date":"Fri, 05 Jun 2015 23:14:36 GMT","content-length":"151"},"status":"400","content":"{\"__type\":\"InvalidSignatureException\",\"message\":\"Signature expired: 20150605T230052Z is now earlier than 20150605T230936Z (20150605T231436Z - 5 min.)\"}"}
