@@ -1,0 +1,1 @@
+{"headers":{"date":"Fri, 05 Jun 2015 23:14:35 GMT","transfer-encoding":"chunked","server":"Amazon SimpleDB"},"status":"403","content":"<?xml version=\"1.0\"?>\n<Response><Errors><Error><Code>InvalidClientTokenId</Code><Message>The AWS Access Key Id you provided does not exist in our records.</Message></Error></Errors><RequestID>000000000000000000000000000000000000</RequestID></Response>"}
